---
source: compiler-core/src/javascript/tests/try_.rs
assertion_line: 27
expression: "pub fn main(x, y) {\n  try _ = x\n  try _ = y\n  x\n}"
---
export function main(x, y) {
  if (!x.isOk()) return x;
  if (!y.isOk()) return y;
  return x;
}

